--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <body>
 
 <!-- Header -->
-    <header class="flex-container">
+    <header  class="flex-container">
         <img src="resources/images/img-tea-cozy-logo.png">
       <nav>
-        <span><a href="#">Mission</a></span>
-        <span><a href="#">Featured Tea</a></span>
-        <span><a href="#">Locations</a></span>
+        <span><a href="#mission">Mission</a></span>
+        <span><a href="#store">Featured Tea</a></span>
+        <span><a href="#locations">Locations</a></span>
       </nav>
     </header>
 
